[package]
name = "airborn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.4.0"
rocket = "0.4.11"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls" ] }
tokio = { version = "1.28.2", features = ["full"] }
