[package]
name = "airborn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.4.0"
rocket = "0.4.11"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls" ] }
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "diesel_postgres_pool"]
